style-spec/src/generator/items/enum/snapshots/maplibre_style_spec__generator__items__r#enum__syntax__tests__generate_spec_expressions.snap
---
source: style-spec/src/generator/items/enum/syntax.rs
expression: "crate::generator::generate_spec_scope(&spec)"
---
/// JSON number in an expression position
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct NumberLiteral(
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_json_number))]
    serde_json::Number,
);

/// JSON string in an expression position
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct StringLiteral(std::string::String);

impl NumberLiteral {
    /// Access the underlying `serde_json::Number`.
    pub fn as_number(&self) -> &serde_json::Number {
        &self.0
    }

    /// Try to represent as `f64`.
    pub fn as_f64(&self) -> Option<f64> {
        self.0.as_f64()
    }
}

impl StringLiteral {
    /// Borrow as `&str`.
    pub fn as_str(&self) -> &str {
        &self.0
    }
}

impl From<serde_json::Number> for NumberLiteral {
    fn from(n: serde_json::Number) -> Self {
        Self(n)
    }
}

impl From<std::string::String> for StringLiteral {
    fn from(s: std::string::String) -> Self {
        Self(s)
    }
}

/// GeoJSON object literal
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct GeoJSONObjectLiteral(
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_geojson))]
    geojson::GeoJson,
);

/// JSON object literal
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct JSONObjectLiteral(
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_json_value))]
    pub  serde_json::Value,
);

/// JSON array literal
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct JSONArrayLiteral(
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_vec_json_value))]
    pub Vec<serde_json::Value>,
);

/// Array whose elements are string literals (e.g. match labels)
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct ArrayOfStringLiteral(Vec<StringLiteral>);

/// Array whose elements are number literals (e.g. match labels)
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct ArrayOfNumberLiteral(Vec<NumberLiteral>);

/// This is a Maplibre Style Specification
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct MaplibreStyleSpecification;

/// An expression node or a literal JSON value in expression positions.
#[derive(PartialEq, Debug, Clone)]
pub enum ExprOrLiteral {
    Null,
    Bool(bool),
    NumberLiteral(NumberLiteral),
    StringLiteral(StringLiteral),
    GeoJSONObjectLiteral(GeoJSONObjectLiteral),
    JSONObjectLiteral(JSONObjectLiteral),
    JSONArrayLiteral(JSONArrayLiteral),
    AnyExpr(Box<Any>),
    ArrayExpr(Box<Array>),
    BooleanExpr(Box<Boolean>),
    CollatorExpr(Box<Collator>),
    ColorExpr(Box<Color>),
    FormattedExpr(Box<Formatted>),
    ImageExpr(Box<Image>),
    NumberExpr(Box<Number>),
    ObjectExpr(Box<Object>),
    StringExpr(Box<String>),
}

impl serde::Serialize for ExprOrLiteral {
    fn serialize<S: serde::Serializer>(&self, serializer: S) -> Result<S::Ok, S::Error> {
        match self {
            Self::Null => serializer.serialize_unit(),
            Self::Bool(v) => v.serialize(serializer),
            Self::NumberLiteral(v) => v.serialize(serializer),
            Self::StringLiteral(v) => v.serialize(serializer),
            Self::GeoJSONObjectLiteral(v) => v.serialize(serializer),
            Self::JSONObjectLiteral(v) => v.serialize(serializer),
            Self::AnyExpr(v) => v.as_ref().serialize(serializer),
            Self::ArrayExpr(v) => v.as_ref().serialize(serializer),
            Self::BooleanExpr(v) => v.as_ref().serialize(serializer),
            Self::CollatorExpr(v) => v.as_ref().serialize(serializer),
            Self::ColorExpr(v) => v.as_ref().serialize(serializer),
            Self::FormattedExpr(v) => v.as_ref().serialize(serializer),
            Self::ImageExpr(v) => v.as_ref().serialize(serializer),
            Self::NumberExpr(v) => v.as_ref().serialize(serializer),
            Self::ObjectExpr(v) => v.as_ref().serialize(serializer),
            Self::StringExpr(v) => v.as_ref().serialize(serializer),
            Self::JSONArrayLiteral(v) => v.serialize(serializer),
        }
    }
}

impl<'de> serde::Deserialize<'de> for ExprOrLiteral {
    fn deserialize<D: serde::Deserializer<'de>>(deserializer: D) -> Result<Self, D::Error> {
        let value = <serde_json::Value as serde::Deserialize>::deserialize(deserializer)?;
        let mut errors: Vec<(&str, std::string::String)> = Vec::new();
        if value.is_null() {
            return Ok(Self::Null);
        }
        match <bool as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::Bool(v)),
            Err(e) => errors.push(("Bool", e.to_string())),
        }
        match <NumberLiteral as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::NumberLiteral(v)),
            Err(e) => errors.push(("NumberLiteral", e.to_string())),
        }
        match <StringLiteral as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::StringLiteral(v)),
            Err(e) => errors.push(("StringLiteral", e.to_string())),
        }
        match <GeoJSONObjectLiteral as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::GeoJSONObjectLiteral(v)),
            Err(e) => errors.push(("GeoJSONObjectLiteral", e.to_string())),
        }
        if !(value.is_array()) {
            match <JSONObjectLiteral as serde::Deserialize>::deserialize(&value) {
                Ok(v) => return Ok(Self::JSONObjectLiteral(v)),
                Err(e) => errors.push(("JSONObjectLiteral", e.to_string())),
            }
        }
        match <Any as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::AnyExpr(Box::new(v))),
            Err(e) => errors.push(("AnyExpr", e.to_string())),
        }
        match <Array as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::ArrayExpr(Box::new(v))),
            Err(e) => errors.push(("ArrayExpr", e.to_string())),
        }
        match <Boolean as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::BooleanExpr(Box::new(v))),
            Err(e) => errors.push(("BooleanExpr", e.to_string())),
        }
        match <Collator as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::CollatorExpr(Box::new(v))),
            Err(e) => errors.push(("CollatorExpr", e.to_string())),
        }
        match <Color as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::ColorExpr(Box::new(v))),
            Err(e) => errors.push(("ColorExpr", e.to_string())),
        }
        match <Formatted as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::FormattedExpr(Box::new(v))),
            Err(e) => errors.push(("FormattedExpr", e.to_string())),
        }
        match <Image as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::ImageExpr(Box::new(v))),
            Err(e) => errors.push(("ImageExpr", e.to_string())),
        }
        match <Number as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::NumberExpr(Box::new(v))),
            Err(e) => errors.push(("NumberExpr", e.to_string())),
        }
        match <Object as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::ObjectExpr(Box::new(v))),
            Err(e) => errors.push(("ObjectExpr", e.to_string())),
        }
        match <String as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::StringExpr(Box::new(v))),
            Err(e) => errors.push(("StringExpr", e.to_string())),
        }
        match <JSONArrayLiteral as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::JSONArrayLiteral(v)),
            Err(e) => errors.push(("JSONArrayLiteral", e.to_string())),
        }

        let details: Vec<std::string::String> =
            errors.iter().map(|(v, e)| format!("{v}: {e}")).collect();
        Err(serde::de::Error::custom(format!(
            "ExprOrLiteral: no variant matched. Expected Null | Bool(bool) | NumberLiteral(NumberLiteral) | StringLiteral(StringLiteral) | GeoJSONObjectLiteral(GeoJSONObjectLiteral) | JSONObjectLiteral(JSONObjectLiteral) | AnyExpr(Any) | ArrayExpr(Array) | BooleanExpr(Boolean) | CollatorExpr(Collator) | ColorExpr(Color) | FormattedExpr(Formatted) | ImageExpr(Image) | NumberExpr(Number) | ObjectExpr(Object) | StringExpr(String) | JSONArrayLiteral(JSONArrayLiteral). Errors: [{}]",
            details.join("; ")
        )))
    }
}

impl ExprOrLiteral {
    /// Collapse expression-wrapping-literal into the canonical literal variant.
    ///
    /// Expression enums (`Boolean`, `Number`, `String`, `Color`) have `Literal` and
    /// `AnyExpr` variants for top-level use (e.g. filter position). When boxed inside
    /// `ExprOrLiteral`, those overlap with `Bool`, `NumberLiteral`, `StringLiteral`,
    /// and `AnyExpr`. This method normalises to the canonical form.
    #[must_use]
    pub fn normalize(self) -> Self {
        match self {
            ExprOrLiteral::BooleanExpr(b) => match *b {
                Boolean::Literal(v) => ExprOrLiteral::Bool(v),
                Boolean::AnyExpr(a) => ExprOrLiteral::AnyExpr(a),
                other => ExprOrLiteral::BooleanExpr(Box::new(other)),
            },
            ExprOrLiteral::NumberExpr(n) => match *n {
                Number::Literal(v) => ExprOrLiteral::NumberLiteral(v),
                Number::AnyExpr(a) => ExprOrLiteral::AnyExpr(a),
                other => ExprOrLiteral::NumberExpr(Box::new(other)),
            },
            ExprOrLiteral::StringExpr(s) => match *s {
                String::Literal(v) => ExprOrLiteral::StringLiteral(v),
                String::AnyExpr(a) => ExprOrLiteral::AnyExpr(a),
                other => ExprOrLiteral::StringExpr(Box::new(other)),
            },
            ExprOrLiteral::ColorExpr(c) => match *c {
                Color::Literal(v) => ExprOrLiteral::StringLiteral(v),
                Color::AnyExpr(a) => ExprOrLiteral::AnyExpr(a),
                other => ExprOrLiteral::ColorExpr(Box::new(other)),
            },
            ExprOrLiteral::ArrayExpr(a) => match *a {
                Array::Literal(v) => ExprOrLiteral::JSONArrayLiteral(v),
                other => ExprOrLiteral::ArrayExpr(Box::new(other)),
            },
            ExprOrLiteral::ObjectExpr(o) => match *o {
                Object::Literal(v) => ExprOrLiteral::JSONObjectLiteral(v),
                other => ExprOrLiteral::ObjectExpr(Box::new(other)),
            },
            // JSONObjectLiteral/JSONArrayLiteral can wrap any serde_json::Value;
            // normalise primitive contents to the matching literal variant.
            ExprOrLiteral::JSONObjectLiteral(JSONObjectLiteral(v)) => match v {
                serde_json::Value::Null => ExprOrLiteral::Null,
                serde_json::Value::Bool(b) => ExprOrLiteral::Bool(b),
                serde_json::Value::Number(n) => {
                    ExprOrLiteral::NumberLiteral(NumberLiteral::from(n))
                }
                serde_json::Value::String(s) => {
                    ExprOrLiteral::StringLiteral(StringLiteral::from(s))
                }
                other => ExprOrLiteral::JSONObjectLiteral(JSONObjectLiteral(other)),
            },
            other => other,
        }
    }
}

#[cfg(feature = "fuzz")]
impl<'a> arbitrary::Arbitrary<'a> for ExprOrLiteral {
    fn arbitrary(u: &mut arbitrary::Unstructured<'a>) -> arbitrary::Result<Self> {
        let tag: u8 = u.arbitrary()?;
        Ok(match tag % 17 {
            0 => ExprOrLiteral::Null,
            1 => ExprOrLiteral::Bool(u.arbitrary()?),
            2 => ExprOrLiteral::NumberLiteral(u.arbitrary()?),
            3 => ExprOrLiteral::StringLiteral(u.arbitrary()?),
            4 => ExprOrLiteral::GeoJSONObjectLiteral(u.arbitrary()?),
            5 => ExprOrLiteral::JSONObjectLiteral(u.arbitrary()?),
            6 => ExprOrLiteral::JSONArrayLiteral(u.arbitrary()?),
            7 => ExprOrLiteral::AnyExpr(u.arbitrary()?),
            8 => ExprOrLiteral::ArrayExpr(u.arbitrary()?),
            9 => ExprOrLiteral::BooleanExpr(u.arbitrary()?),
            10 => ExprOrLiteral::CollatorExpr(u.arbitrary()?),
            11 => ExprOrLiteral::ColorExpr(u.arbitrary()?),
            12 => ExprOrLiteral::FormattedExpr(u.arbitrary()?),
            13 => ExprOrLiteral::ImageExpr(u.arbitrary()?),
            14 => ExprOrLiteral::NumberExpr(u.arbitrary()?),
            15 => ExprOrLiteral::ObjectExpr(u.arbitrary()?),
            _ => ExprOrLiteral::StringExpr(u.arbitrary()?),
        }
        .normalize())
    }
}

/// "Any"
#[derive(PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub enum Any {
    /// Binds expressions to named variables.
    Let((Vec<(StringLiteral, ExprOrLiteral)>, ExprOrLiteral)),
}

impl<'de> serde::Deserialize<'de> for Any {
    fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    where
        D: serde::Deserializer<'de>,
    {
        deserializer.deserialize_seq(AnyVisitor)
    }
}

/// Visitor for deserializing the syntax enum [`Any`]
struct AnyVisitor;

impl<'de> serde::de::Visitor<'de> for AnyVisitor {
    type Value = Any;

    fn expecting(&self, formatter: &mut std::fmt::Formatter) -> std::fmt::Result {
        formatter.write_str("an Any expression (example: [\"let\",\"someNumber\",500,[\"interpolate\",[\"linear\"],[\"var\",\"someNumber\"],274,\"#edf8e9\",1551,\"#006d2c\"]])")
    }

    fn visit_seq<A: serde::de::SeqAccess<'de>>(self, mut seq: A) -> Result<Self::Value, A::Error> {
        /// Reads the next element from the sequence or reports a missing field error.
        #[allow(dead_code)]
        fn visit_seq_field<'de, A, T>(seq: &mut A, name: &'static str) -> Result<T, A::Error>
        where
            A: serde::de::SeqAccess<'de>,
            T: serde::Deserialize<'de>,
        {
            seq.next_element()?
                .ok_or_else(|| serde::de::Error::missing_field(name))
        }

        // First element: operator string
        let op: std::string::String = seq
            .next_element()?
            .ok_or_else(|| serde::de::Error::custom("missing operator"))?;
        match op.as_str() {
            "let" => {
                let mut inputs = Vec::new();
                let mut rest: Vec<serde_json::Value> = Vec::new();
                while let Some(v) = seq.next_element()? {
                    rest.push(v);
                }
                if rest.is_empty() {
                    return Err(serde::de::Error::custom(
                        "{name}::{variant_name}: too few arguments",
                    ));
                }
                if !(rest.len() - 1).is_multiple_of(2) {
                    return Err(serde::de::Error::custom(
                        "Any::Let: malformed template/suffix layout",
                    ));
                }
                let inputs_len = (rest.len() - 1) / 2;
                for i in 0..inputs_len {
                    let var_name_i = serde_json::from_value(rest[i * 2].clone())
                        .map_err(serde::de::Error::custom)?;
                    let var_value_i = serde_json::from_value(rest[i * 2 + 1].clone())
                        .map_err(serde::de::Error::custom)?;
                    let element = (var_name_i, var_value_i);
                    inputs.push(element);
                }
                let expression = serde_json::from_value(rest[inputs_len * 2].clone())
                    .map_err(serde::de::Error::custom)?;
                Ok(Any::Let((inputs, expression)))
            }
            _ => Err(serde::de::Error::unknown_variant(&op, &["let"])),
        }
    }
}

impl serde::Serialize for Any {
    fn serialize<S>(&self, serializer: S) -> Result<S::Ok, S::Error>
    where
        S: serde::Serializer,
    {
        use serde::ser::SerializeSeq;
        match self {
            Any::Let(inner) => {
                let inner_val = serde_json::to_value(inner).map_err(serde::ser::Error::custom)?;
                let mut seq = serializer.serialize_seq(None)?;
                seq.serialize_element("let")?;
                if let serde_json::Value::Array(top) = &inner_val {
                    for elem in top {
                        if let serde_json::Value::Array(sub) = elem {
                            if sub.is_empty() {
                                // Empty Vec — nothing to flatten.
                            } else if sub[0].is_array() {
                                // An array-of-arrays is the Vec<(A,B)> — flatten it.
                                for pair in sub {
                                    if let serde_json::Value::Array(pair_elems) = pair {
                                        for pe in pair_elems {
                                            seq.serialize_element(pe)?;
                                        }
                                    } else {
                                        seq.serialize_element(pair)?;
                                    }
                                }
                            } else {
                                // Plain array value (e.g. a sub-expression like ["zoom"]).
                                seq.serialize_element(elem)?;
                            }
                        } else {
                            seq.serialize_element(elem)?;
                        }
                    }
                } else {
                    seq.serialize_element(&inner_val)?;
                }
                seq.end()
            }
        }
    }
}

#[cfg(test)]
mod test {
    use super::*;

    #[rstest::rstest]
    #[case::t_let(serde_json::json!(["let","someNumber",500,["interpolate",["linear"],["var","someNumber"],274,"#edf8e9",1551,"#006d2c"]]))]
    fn test_example_any_decodes(#[case] example: serde_json::Value) {
        let _ = serde_json::from_value::<Any>(example).expect("example should decode");
    }
}
