style-spec/src/generator/items/enum/snapshots/maplibre_style_spec__generator__items__r#enum__syntax__tests__generate_spec_fmt.snap
---
source: style-spec/src/generator/items/enum/syntax.rs
expression: "crate::generator::generate_spec_scope(&spec)"
---
/// JSON number in an expression position
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct NumberLiteral(
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_json_number))]
    serde_json::Number,
);

/// JSON string in an expression position
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct StringLiteral(std::string::String);

impl From<serde_json::Number> for NumberLiteral {
    fn from(n: serde_json::Number) -> Self {
        Self(n)
    }
}

impl From<std::string::String> for StringLiteral {
    fn from(s: std::string::String) -> Self {
        Self(s)
    }
}

/// GeoJSON object literal
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct GeoJSONObjectLiteral(
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_geojson))]
    geojson::GeoJson,
);

/// JSON object literal
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct JSONObjectLiteral(
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_json_value))]
    serde_json::Value,
);

/// JSON array literal
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct JSONArrayLiteral(
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_vec_json_value))]
    Vec<serde_json::Value>,
);

/// Array whose elements are string literals (e.g. match labels)
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct ArrayOfStringLiteral(Vec<StringLiteral>);

/// Array whose elements are number literals (e.g. match labels)
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct ArrayOfNumberLiteral(Vec<NumberLiteral>);

/// This is a Maplibre Style Specification
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct MaplibreStyleSpecification;

/// Either of the below variants
#[derive(PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub enum StringOrImageAsUnion {
    String(Box<String>),
    Image(Image),
}

impl serde::Serialize for StringOrImageAsUnion {
    fn serialize<S: serde::Serializer>(&self, serializer: S) -> Result<S::Ok, S::Error> {
        match self {
            Self::String(v) => v.serialize(serializer),
            Self::Image(v) => v.serialize(serializer),
        }
    }
}

impl<'de> serde::Deserialize<'de> for StringOrImageAsUnion {
    fn deserialize<D: serde::Deserializer<'de>>(deserializer: D) -> Result<Self, D::Error> {
        let value = <serde_json::Value as serde::Deserialize>::deserialize(deserializer)?;
        let mut errors: Vec<(&str, std::string::String)> = Vec::new();
        match <Box<String> as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::String(v)),
            Err(e) => errors.push(("String", e.to_string())),
        }
        match <Image as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::Image(v)),
            Err(e) => errors.push(("Image", e.to_string())),
        }

        let details: Vec<std::string::String> =
            errors.iter().map(|(v, e)| format!("{v}: {e}")).collect();
        Err(serde::de::Error::custom(format!(
            "StringOrImageAsUnion: no variant matched. Expected String(Box<String>) | Image(Image). Errors: [{}]",
            details.join("; ")
        )))
    }
}

/// Tuple row for variadic (content, optional style object) pairs.
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub struct ExpressionNameFormatVariadicRow(
    StringOrImageAsUnion,
    #[cfg_attr(feature = "fuzz", arbitrary(with = crate::fuzz_helpers::arbitrary_option_json_map))]
    Option<serde_json::Map<std::string::String, serde_json::Value>>,
);

/// First element in an expression array. May be followed by a number of arguments.
#[derive(PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub enum ExpressionName {
    /// Returns a `formatted` string for displaying mixed-format text in the `text-field` property.
    Format(Vec<ExpressionNameFormatVariadicRow>),
}

impl<'de> serde::Deserialize<'de> for ExpressionName {
    fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    where
        D: serde::Deserializer<'de>,
    {
        deserializer.deserialize_seq(ExpressionNameVisitor)
    }
}

/// Visitor for deserializing the syntax enum [`ExpressionName`]
struct ExpressionNameVisitor;

impl<'de> serde::de::Visitor<'de> for ExpressionNameVisitor {
    type Value = ExpressionName;

    fn expecting(&self, formatter: &mut std::fmt::Formatter) -> std::fmt::Result {
        formatter.write_str("an ExpressionName expression (example: [\"format\",[\"upcase\",[\"get\",\"FacilityName\"]],{\"font-scale\":0.8},\"\\n\\n\",{},[\"downcase\",[\"get\",\"Comments\"]],{\"font-scale\":0.6}])")
    }

    fn visit_seq<A: serde::de::SeqAccess<'de>>(self, mut seq: A) -> Result<Self::Value, A::Error> {
        /// Reads the next element from the sequence or reports a missing field error.
        #[allow(dead_code)]
        fn visit_seq_field<'de, A, T>(seq: &mut A, name: &'static str) -> Result<T, A::Error>
        where
            A: serde::de::SeqAccess<'de>,
            T: serde::Deserialize<'de>,
        {
            seq.next_element()?
                .ok_or_else(|| serde::de::Error::missing_field(name))
        }

        // First element: operator string
        let op: std::string::String = seq
            .next_element()?
            .ok_or_else(|| serde::de::Error::custom("missing operator"))?;
        match op.as_str() {
            "format" => {
                let mut inputs = Vec::new();
                let mut rest: Vec<serde_json::Value> = Vec::new();
                while let Some(v) = seq.next_element()? {
                    rest.push(v);
                }
                let mut idx = 0;
                while idx < rest.len() {
                    let input_i = serde_json::from_value(rest[idx].clone())
                        .map_err(serde::de::Error::custom)?;
                    idx += 1;
                    let style_overrides_i = if idx < rest.len() && rest[idx].is_object() {
                        let v = serde_json::from_value(rest[idx].clone())
                            .map_err(serde::de::Error::custom)?;
                        idx += 1;
                        Some(v)
                    } else {
                        None
                    };
                    let element = ExpressionNameFormatVariadicRow(input_i, style_overrides_i);
                    inputs.push(element);
                }
                Ok(ExpressionName::Format(inputs))
            }
            _ => Err(serde::de::Error::unknown_variant(&op, &["format"])),
        }
    }
}

impl serde::Serialize for ExpressionName {
    fn serialize<S>(&self, serializer: S) -> Result<S::Ok, S::Error>
    where
        S: serde::Serializer,
    {
        use serde::ser::SerializeSeq;
        match self {
            ExpressionName::Format(inner) => {
                let inner_val = serde_json::to_value(inner).map_err(serde::ser::Error::custom)?;
                let mut seq = serializer.serialize_seq(None)?;
                seq.serialize_element("format")?;
                if let serde_json::Value::Array(top) = &inner_val {
                    for elem in top {
                        if let serde_json::Value::Array(pair_elems) = elem {
                            let mut trimmed = pair_elems.clone();
                            while trimmed.last().is_some_and(serde_json::Value::is_null) {
                                trimmed.pop();
                            }
                            for pe in &trimmed {
                                seq.serialize_element(pe)?;
                            }
                        } else {
                            seq.serialize_element(elem)?;
                        }
                    }
                } else {
                    seq.serialize_element(&inner_val)?;
                }
                seq.end()
            }
        }
    }
}

#[cfg(test)]
mod test {
    use super::*;

    #[rstest::rstest]
    #[case::t_format(serde_json::json!(["format",["upcase",["get","FacilityName"]],{"font-scale":0.8},"\n\n",{},["downcase",["get","Comments"]],{"font-scale":0.6}]))]
    fn test_example_expression_name_decodes(#[case] example: serde_json::Value) {
        let _ = serde_json::from_value::<ExpressionName>(example).expect("example should decode");
    }
}

/// An expression node or a literal JSON value in expression positions.
#[derive(PartialEq, Debug, Clone)]
#[cfg_attr(feature = "fuzz", derive(arbitrary::Arbitrary))]
pub enum ExprOrLiteral {
    Null,
    Bool(bool),
    NumberLiteral(NumberLiteral),
    StringLiteral(StringLiteral),
    GeoJSONObjectLiteral(GeoJSONObjectLiteral),
    JSONObjectLiteral(JSONObjectLiteral),
    JSONArrayLiteral(JSONArrayLiteral),
    AnyExpr(Box<Any>),
    ArrayExpr(Box<Array>),
    BooleanExpr(Box<Boolean>),
    CollatorExpr(Box<Collator>),
    ColorExpr(Box<Color>),
    FormattedExpr(Box<Formatted>),
    ImageExpr(Box<Image>),
    NumberExpr(Box<Number>),
    ObjectExpr(Box<Object>),
    StringExpr(Box<String>),
}

impl serde::Serialize for ExprOrLiteral {
    fn serialize<S: serde::Serializer>(&self, serializer: S) -> Result<S::Ok, S::Error> {
        match self {
            Self::Null => serializer.serialize_unit(),
            Self::Bool(v) => v.serialize(serializer),
            Self::NumberLiteral(v) => v.serialize(serializer),
            Self::StringLiteral(v) => v.serialize(serializer),
            Self::GeoJSONObjectLiteral(v) => v.serialize(serializer),
            Self::JSONObjectLiteral(v) => v.serialize(serializer),
            Self::AnyExpr(v) => v.as_ref().serialize(serializer),
            Self::ArrayExpr(v) => v.as_ref().serialize(serializer),
            Self::BooleanExpr(v) => v.as_ref().serialize(serializer),
            Self::CollatorExpr(v) => v.as_ref().serialize(serializer),
            Self::ColorExpr(v) => v.as_ref().serialize(serializer),
            Self::FormattedExpr(v) => v.as_ref().serialize(serializer),
            Self::ImageExpr(v) => v.as_ref().serialize(serializer),
            Self::NumberExpr(v) => v.as_ref().serialize(serializer),
            Self::ObjectExpr(v) => v.as_ref().serialize(serializer),
            Self::StringExpr(v) => v.as_ref().serialize(serializer),
            Self::JSONArrayLiteral(v) => v.serialize(serializer),
        }
    }
}

impl<'de> serde::Deserialize<'de> for ExprOrLiteral {
    fn deserialize<D: serde::Deserializer<'de>>(deserializer: D) -> Result<Self, D::Error> {
        let value = <serde_json::Value as serde::Deserialize>::deserialize(deserializer)?;
        let mut errors: Vec<(&str, std::string::String)> = Vec::new();
        if value.is_null() {
            return Ok(Self::Null);
        }
        match <bool as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::Bool(v)),
            Err(e) => errors.push(("Bool", e.to_string())),
        }
        match <NumberLiteral as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::NumberLiteral(v)),
            Err(e) => errors.push(("NumberLiteral", e.to_string())),
        }
        match <StringLiteral as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::StringLiteral(v)),
            Err(e) => errors.push(("StringLiteral", e.to_string())),
        }
        match <GeoJSONObjectLiteral as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::GeoJSONObjectLiteral(v)),
            Err(e) => errors.push(("GeoJSONObjectLiteral", e.to_string())),
        }
        if !(value.is_array()) {
            match <JSONObjectLiteral as serde::Deserialize>::deserialize(&value) {
                Ok(v) => return Ok(Self::JSONObjectLiteral(v)),
                Err(e) => errors.push(("JSONObjectLiteral", e.to_string())),
            }
        }
        match <Any as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::AnyExpr(Box::new(v))),
            Err(e) => errors.push(("AnyExpr", e.to_string())),
        }
        match <Array as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::ArrayExpr(Box::new(v))),
            Err(e) => errors.push(("ArrayExpr", e.to_string())),
        }
        match <Boolean as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::BooleanExpr(Box::new(v))),
            Err(e) => errors.push(("BooleanExpr", e.to_string())),
        }
        match <Collator as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::CollatorExpr(Box::new(v))),
            Err(e) => errors.push(("CollatorExpr", e.to_string())),
        }
        match <Color as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::ColorExpr(Box::new(v))),
            Err(e) => errors.push(("ColorExpr", e.to_string())),
        }
        match <Formatted as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::FormattedExpr(Box::new(v))),
            Err(e) => errors.push(("FormattedExpr", e.to_string())),
        }
        match <Image as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::ImageExpr(Box::new(v))),
            Err(e) => errors.push(("ImageExpr", e.to_string())),
        }
        match <Number as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::NumberExpr(Box::new(v))),
            Err(e) => errors.push(("NumberExpr", e.to_string())),
        }
        match <Object as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::ObjectExpr(Box::new(v))),
            Err(e) => errors.push(("ObjectExpr", e.to_string())),
        }
        match <String as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::StringExpr(Box::new(v))),
            Err(e) => errors.push(("StringExpr", e.to_string())),
        }
        match <JSONArrayLiteral as serde::Deserialize>::deserialize(&value) {
            Ok(v) => return Ok(Self::JSONArrayLiteral(v)),
            Err(e) => errors.push(("JSONArrayLiteral", e.to_string())),
        }

        let details: Vec<std::string::String> =
            errors.iter().map(|(v, e)| format!("{v}: {e}")).collect();
        Err(serde::de::Error::custom(format!(
            "ExprOrLiteral: no variant matched. Expected Null | Bool(bool) | NumberLiteral(NumberLiteral) | StringLiteral(StringLiteral) | GeoJSONObjectLiteral(GeoJSONObjectLiteral) | JSONObjectLiteral(JSONObjectLiteral) | AnyExpr(Any) | ArrayExpr(Array) | BooleanExpr(Boolean) | CollatorExpr(Collator) | ColorExpr(Color) | FormattedExpr(Formatted) | ImageExpr(Image) | NumberExpr(Number) | ObjectExpr(Object) | StringExpr(String) | JSONArrayLiteral(JSONArrayLiteral). Errors: [{}]",
            details.join("; ")
        )))
    }
}
